--- a/arch/arm/boot/dts/imx6qdl-crix-arx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-crix-arx.dtsi
@@ -122,7 +122,7 @@
 
 	backlight: backlight {
 		compatible = "pwm-backlight";
-		pwms = <&pwm1 0 200000>;
+		pwms = <&pwm1 0 1000000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <7>;
 		pinctrl-0 = <&pinctrl_bkl>;
