debian: fix CROSS_COMPILE= which is not filled from the mako template
CROSS_COMPILE is actually supposed to be filled by elbe debianize,
but the current template does not do that.

fix it manually.

Signed-off-by: Torben Hohn <torben.hohn@linutronix.de>
Signed-off-by: Jan Willeke <jan.willeke@linutronix.de>
Reviewed-by: Volker Haspel <volker.haspel@linutronix.de>

--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,7 @@ ifeq ($(ARCH),x86_64)
         SRCARCH := x86
 endif
 
-MAKE_OPTS= ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNELRELEASE=$(REL) LOADADDR=0x800800 INSTALL_MOD_PATH=$(MOD_PATH) INSTALL_FW_PATH=$(FW_PATH) INSTALL_HDR_PATH=$(HDR_PATH) INSTALL_PATH=$(KERNEL_PATH) INSTALL_DTBS_PATH=$(DTBS_PATH) O=$(BUILD_DIR)
+MAKE_OPTS= ARCH=$(ARCH) CROSS_COMPILE=arm-linux-gnueabihf- KERNELRELEASE=$(REL) LOADADDR=0x10008000 INSTALL_MOD_PATH=$(MOD_PATH) INSTALL_FW_PATH=$(FW_PATH) INSTALL_HDR_PATH=$(HDR_PATH) INSTALL_PATH=$(KERNEL_PATH) INSTALL_DTBS_PATH=$(DTBS_PATH) O=$(BUILD_DIR)
 
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
     NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
