--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: linux-ces-4.19
 Section: kernel
 Priority: optional
 Maintainer: Jan Willeke <jan.willeke@linutronix.de>
-Build-Depends: debhelper (>= 9), bc, libelf-dev
+Build-Depends: debhelper (>= 9), bc, libelf-dev, bison, flex, kmod, libssl-dev, lzop
 Standards-Version: 3.8.4
 Homepage: http://www.kernel.org/
 
@@ -15,13 +15,6 @@ Description: Linux kernel, version 4.19 ces
  This package contains the Linux kernel, modules and corresponding other
  files
 
-Package: linux-headers-ces-4.19
-Provides: linux-headers, linux-headers-2.6
-Architecture: armhf
-Description: Linux kernel headers
- This package provides kernel header files
- .
- This is useful for people who need to build external modules
 
 Package: linux-libc-dev-ces-4.19
 Provides: linux-libc-dev, linux-kernel-headers, linux-headers-2.6
