--- a/arch/arm/boot/dts/imx6qdl-pixi-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-pixi-cx.dtsi
@@ -108,8 +108,6 @@
 			      <&intc 0 119 IRQ_TYPE_LEVEL_HIGH>;
 	fsl,err006687-workaround-present;
 	phy-handle = <&ethphy>;
-	phy-reset-gpios = <&gpio3 22 GPIO_ACTIVE_LOW>;
-	phy-reset-duration = <30>;
 	status = "okay";
 
 	mdio {
@@ -122,6 +120,11 @@
 			reg = <1>;
 			max-speed = <100>;
 			clock-frequency = <50000000>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_ethphy>;
+			reset-gpios = <&gpio3 22 GPIO_ACTIVE_LOW>;
+			reset-assert-us = <120>;
+			reset-deassert-us = <120>;
 		};
 	};
 };
@@ -184,8 +187,13 @@
 				MX6QDL_PAD_ENET_TXD1__ENET_TX_DATA1	0x1b0b0
 				MX6QDL_PAD_GPIO_16__ENET_REF_CLK	0x4001b0a8
 				MX6QDL_PAD_ENET_CRS_DV__ENET_RX_EN	0x1b0b0
-				MX6QDL_PAD_EIM_D22__GPIO3_IO22		0x1b0b0 /* LAN8720 nRST */
 				MX6QDL_PAD_GPIO_6__ENET_IRQ		0x000b1 /* workaround for err006687 */
+			>;
+		};
+
+		pinctrl_ethphy: ethphygrp {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D22__GPIO3_IO22          0x1b0b0 /* LAN8720 nRST */
 			>;
 		};
 
