debian: rules: add crix and 4cbox dtbs to package
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/debian/rules
+++ b/debian/rules
@@ -48,6 +48,10 @@ override_dh_auto_build:
 	$(MAKE) $(MAKE_OPTS) zImage modules
 	$(MAKE) $(MAKE_OPTS) imx6dl-pixi-cdlx00.dtb
 	$(MAKE) $(MAKE_OPTS) imx6q-pixi-cqx00.dtb
+	$(MAKE) $(MAKE_OPTS) imx6dl-4cbox-cdlx00.dtb
+	$(MAKE) $(MAKE_OPTS) imx6q-4cbox-cqx00.dtb
+	$(MAKE) $(MAKE_OPTS) imx6dl-crix-cdlx00.dtb
+	$(MAKE) $(MAKE_OPTS) imx6q-crix-cqx00.dtb
 
 override_dh_auto_test:
 	echo "autotest is disabled" # whitout this it leads into elbe build errors
