ARM: dts: 4cbox-cx: fix poweroff beahvior
Set snvs_poweroff status=okay.

Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-4cbox-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-4cbox-cx.dtsi
@@ -439,6 +439,10 @@ imx6qdl-pixi {
 	status = "disabled";
 };
 
+&snvs_poweroff {
+	status = "okay";
+};
+
 &can1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1_mcb>;
