ARM: dts: crix-arx: add own VDDD-supply regulator for sgtl5000
sgtl5000 failed to initialize correctly, because a LDO voltage
of 3.3V assigned to VDDD-supply causes an abort of the driver init
probe. (Limit for VDDD is 1.9V)

If no regulator is supplied for VDDD-supply the internal regulator
is used. This should be prevented as stated in ER1 erratum of sgtl500.

As crix-arx uses a LDO with 1.3V add a fixed regulator to the
devicetree to correctly initialize sgtl5000 with external LDO.

Signed-off-by: Steffen Kothe <skothe@christ-es.de>
Reviewed-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-crix-arx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-crix-arx.dtsi
@@ -59,6 +59,14 @@
 			regulator-max-microvolt = <3300000>;
 			regulator-always-on;
 		};
+
+		reg_1v3: regulator@3 {
+			compatible = "regulator-fixed";
+			regulator-name = "1P3V";
+			regulator-min-microvolt = <1300000>;
+			regulator-max-microvolt = <1300000>;
+			regulator-always-on;
+		};
 	};
 
 	backlight: backlight {
@@ -186,7 +194,7 @@
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
 		clocks = <&clks 201>;
-		VDDD-supply = <&reg_3v3>;
+		VDDD-supply = <&reg_1v3>;
 		VDDA-supply = <&reg_3v3>;
 		VDDIO-supply = <&reg_3v3>;
 	};
