ARM: configs: imx6_ces_defconfig: add CONFIG_TCG_TIS_SPI
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/configs/imx6_ces_defconfig
+++ b/arch/arm/configs/imx6_ces_defconfig
@@ -185,6 +185,8 @@ CONFIG_SERIAL_IMX_CONSOLE=y
 CONFIG_SERIAL_FSL_LPUART=y
 CONFIG_SERIAL_FSL_LPUART_CONSOLE=y
 CONFIG_SERIAL_DEV_BUS=y
+CONFIG_TCG_TPM=y
+CONFIG_TCG_TIS_SPI=y
 # CONFIG_I2C_COMPAT is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
@@ -404,7 +406,6 @@ CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_ISO8859_15=m
 CONFIG_NLS_UTF8=y
-CONFIG_SECURITYFS=y
 CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_CRYPTO_DEV_SAHARA=y
 CONFIG_CRC_CCITT=m
