ARM: dts: 4cbox-cx: add Infineon SLB9670 TPM
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-4cbox-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-4cbox-cx.dtsi
@@ -145,10 +145,10 @@
 	pinctrl-0 = <&pinctrl_ecspi3>;
 	status = "okay";
 
-	spidev1: spidev@1 {
-		compatible = "spidev";
+	tpm_spi: tpm@0 {
+		compatible = "infineon,slb9670", "tcg,tpm_tis-spi";
 		reg = <0>;
-		spi-max-frequency = <23000000>;
+		spi-max-frequency = <38000000>;
 	};
 };
 
