ARM: dts: medix-tx: add devicetree
Restructure the medix family to use a common imx6qdl-medix-x.dtsi

Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -492,6 +492,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-marsboard.dtb \
 	imx6q-mccmon6.dtb \
 	imx6q-medix-rqx00.dtb \
+	imx6q-medix-tdlx00.dtb \
 	imx6q-nitrogen6x.dtb \
 	imx6q-nitrogen6_max.dtb \
 	imx6q-nitrogen6_som2.dtb \
