ARM: dts: medix-x: add microphone audio config
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-medix-x.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-medix-x.dtsi
@@ -118,6 +118,7 @@
 		ssi-controller = <&ssi2>;
 		audio-codec = <&codec>;
 		audio-routing =
+			"MIC_IN", "Mic Jack",
 			"Ext Spk", "LINE_OUT";
 		mux-int-port = <2>;
 		mux-ext-port = <3>;
