ARM: dts: 4cbox-cx: use 4cbox as name for iomuxc subnode
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-4cbox-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-4cbox-cx.dtsi
@@ -205,7 +205,7 @@
 		     &pinctrl_flexcan1_gpio_mcb
 		    >;
 
-imx6qdl-pixi {
+imx6qdl-4cbox {
 		pinctrl_enet: enetgrp {
 			fsl,pins = <
 				MX6QDL_PAD_ENET_MDIO__ENET_MDIO		0x1b0b0
