ARM: dts: medix-x: use different clock parents for imx6q and dl
For the LVDS timings to work as expected the imx6q needs
a different clock than imx6dl. Before this the LVDS clock
was stuck at ~36MHz.

Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6dl-medix-tdlx00.dts
+++ b/arch/arm/boot/dts/imx6dl-medix-tdlx00.dts
@@ -23,6 +23,13 @@
 	compatible = "ces,imx6dl-medix-tdlx", "fsl,imx6dl";
 };
 
+&clks {
+        assigned-clocks = <&clks IMX6QDL_CLK_LDB_DI0_SEL>,
+                          <&clks IMX6QDL_CLK_LDB_DI1_SEL>;
+        assigned-clock-parents = <&clks IMX6QDL_CLK_PLL5_VIDEO>,
+                                 <&clks IMX6QDL_CLK_PLL5_VIDEO>;
+};
+
 &hdmi {
 	status = "disabled";
 };
