--- a/arch/arm/boot/dts/imx6qdl-pixi-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-pixi-cx.dtsi
@@ -59,6 +59,7 @@
 		display-enable-gpios = <&gpio1 7 0>;
 		pwm-on-delay-ms = <150>;
 		pwm-off-delay-ms = <50>;
+		display-hold-off-ms = <20>;
 		status = "okay";
 	};
 
