ARM: dts: crix-arx: add display-hold-off time
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-crix-arx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-crix-arx.dtsi
@@ -79,6 +79,7 @@
 		display-enable-gpios = <&gpio3 13 0>;
 		pwm-on-delay-ms = <150>;
 		pwm-off-delay-ms = <50>;
+		display-hold-off-ms = <20>;
 		status = "okay";
 	};
 
