ARM: dts: crix-cx: add display-hold-off time
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-crix-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-crix-cx.dtsi
@@ -61,6 +61,7 @@
 		default-brightness-level = <7>;
 		pinctrl-0 = <&pinctrl_bkl>;
 		enable-display-gpios = <&gpio3 13 0>;
+		display-hold-off-ms = <20>;
 		status = "okay";
 	};
 
