--- a/arch/arm/boot/dts/imx6qdl-medix-x.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-medix-x.dtsi
@@ -79,6 +79,7 @@
 		display-enable-gpios = <&gpio3 13 0>;
 		pwm-on-delay-ms = <150>;
 		pwm-off-delay-ms = <50>;
+		display-hold-off-ms = <20>;
 		status = "okay";
 	};
 
