--- a/arch/arm/configs/imx6_ces_defconfig
+++ b/arch/arm/configs/imx6_ces_defconfig
@@ -286,6 +286,7 @@ CONFIG_SND_SOC_TLV320AIC3X=y
 CONFIG_SND_SOC_WM8960=y
 CONFIG_SND_SOC_WM8962=y
 CONFIG_SND_SIMPLE_CARD=y
+CONFIG_HIDRAW=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
