ARM: dts: medix-x: add ENA_I2C2_EX gpio
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-medix-x.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-medix-x.dtsi
@@ -372,6 +372,7 @@
 				MX6QDL_PAD_DI0_PIN4__GPIO4_IO20		0x130b0 /* INTF_24_OUT1 PD */
 				MX6QDL_PAD_CSI0_DAT12__GPIO5_IO30	0x130b0 /* SD_AUDIO_AMP PD */
 				MX6QDL_PAD_CSI0_VSYNC__GPIO5_IO21	0x1b0b1 /* SWITCH PU */
+				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x1b0b1 /* ENA_I2C2_EX PU */
 			>;
 		};
 
