ARM: dts: pixi-cx: add 2x in, 4x out gpios
Signed-off-by: Peter Fink <pfink@christ-es.de>

--- a/arch/arm/boot/dts/imx6qdl-pixi-cx.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-pixi-cx.dtsi
@@ -309,10 +309,16 @@
 			fsl,pins = <
 				MX6QDL_PAD_DISP0_DAT11__GPIO5_IO05	0x130b0 /* DOUT1 */
 				MX6QDL_PAD_DISP0_DAT12__GPIO5_IO06	0x130b0 /* DOUT2 */
-				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x1b0b0 /* DIGIN1 */
-				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x1b0b0 /* DIGIN2 */
-				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x1b0b0 /* DIGIN3 */
-				MX6QDL_PAD_EIM_DA8__GPIO3_IO08		0x1b0b0 /* DIGIN4 */
+				MX6QDL_PAD_DISP0_DAT13__GPIO5_IO07	0x130b0 /* DOUT3 */
+				MX6QDL_PAD_DISP0_DAT14__GPIO5_IO08	0x130b0 /* DOUT4 */
+				MX6QDL_PAD_DISP0_DAT15__GPIO5_IO09	0x130b0 /* DOUT5 */
+				MX6QDL_PAD_DISP0_DAT16__GPIO5_IO10	0x130b0 /* DOUT6 */
+				MX6QDL_PAD_EIM_DA3__GPIO3_IO03		0x1b0b0 /* DIGIN1 */
+				MX6QDL_PAD_EIM_DA4__GPIO3_IO04		0x1b0b0 /* DIGIN2 */
+				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x1b0b0 /* DIGIN3 */
+				MX6QDL_PAD_EIM_DA6__GPIO3_IO06		0x1b0b0 /* DIGIN4 */
+				MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x1b0b0 /* DIGIN5 */
+				MX6QDL_PAD_EIM_DA8__GPIO3_IO08		0x1b0b0 /* DIGIN6 */
 			>;
 		};
 	};
