--- a/debian/rules
+++ b/debian/rules
@@ -52,6 +52,7 @@ override_dh_auto_build:
 	$(MAKE) $(MAKE_OPTS) imx6q-4cbox-cqx00.dtb
 	$(MAKE) $(MAKE_OPTS) imx6dl-crix-cdlx00.dtb
 	$(MAKE) $(MAKE_OPTS) imx6q-crix-cqx00.dtb
+	$(MAKE) $(MAKE_OPTS) imx6q-crix-arqx00.dtb
 
 override_dh_auto_test:
 	echo "autotest is disabled" # whitout this it leads into elbe build errors
